--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -55,7 +55,7 @@
 				containers = [];
 
 				var div = document.getElementById("display")
-				for(var pv in widget.PVList)
+				for(var pv in widget.pvList)
 				{
 					var divtemp = document.getElementById('label-div-' + pv)
 					if (divtemp == null)
