--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -50,7 +50,7 @@
 			{
 				var i = 0;
 				PVList = {};
-				for (pv in widget.PVList)
+				for (pv in widget.pvList)
 				{
 					timeData[pv] = [];
 					valueData[pv] = [];
