--- a/WebGUI/html/widgets/table.html
+++ b/WebGUI/html/widgets/table.html
@@ -51,7 +51,7 @@
 			{
 				var i = 0;
 				tabledata = []
-				for (pv in widget.PVList)
+				for (pv in widget.pvList)
 				{
 					var row = {
 								  id:i
