--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -23,6 +23,7 @@
   <script  src="../js/STDLINE.js"   			                                        type="text/javascript"                  ></script>
   <script  src="../js/navigatorTools.js"   			                                type="text/javascript"                  ></script>
   <script  src="../js/complexLayout.js"   			                                type="text/javascript"                  ></script>
+  <script  src="../js/complexLayoutPersistency.js"   			                        type="text/javascript"                  ></script>
  </head>
 
  <body>
