--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -40,7 +40,7 @@
 			{
 				console.log("LED init()");
 				console.log(window.frameElement.id);
-				window.parent.setupWidget(window.frameElement.id, getParameters());
+				window.parent.setupWidget(window.frameElement.id, getAttributes());
 			}
 
 			function setupPVs(settings)
@@ -102,19 +102,19 @@
 				context.stroke();
 			}
 
-			function getParameters()
+			function getAttributes()
 			{
 				return parameters_;
 			}
 
-			function setParameters(attributes)
+			function setAttributes(attributes)
 			{
 				parameters_ = attributes;
 				console.log("thermometer: set parameters()");
 				console.log(parameters_);
 			}
 
-			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
+			function drawNewValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("LED newValue() reached", pvName, pvValue);
 				var canvas = document.getElementById('led');
