--- a/WebGUI/html/widgets/picture.html
+++ b/WebGUI/html/widgets/picture.html
@@ -5,7 +5,7 @@
 		<style type="text/css">	
 			body {
 				font: 10px arial;
-				background-color: rgba(250, 250, 250, 0);
+				background-color: rgba(255, 255, 255, 1);
 				width: 30;
 				height: 30;
 				//margin: 0px !important;
@@ -30,24 +30,24 @@
 			{
 				console.log("Label init()");
 				console.log(window.frameElement.id);
-				window.parent.setupWidget(window.frameElement.id, getParameters());
+				window.parent.setupWidget(window.frameElement.id, getAttributes());
 			}
 
 			function setupPVs(settings)	{}
 
 			function drawWidget(widget, parameters)
 			{
-				setParameters(window.parent.page_.widgets[widget.el.id].attributes);
+				setAttributes(window.parent.page_.widgets[widget.el.id.split('-')[1]].attributes);
 			}
 
-			function getParameters()
+			function getAttributes()
 			{
 				parameters_["class"] = "";
 				parameters_["file"] = "/WebPath/html/widgets/picture-icon.png";
 				return parameters_;
 			}
 
-			function setParameters(attributes)
+			function setAttributes(attributes)
 			{
 				parameters_ = attributes;
 				console.log(parameters_);
