--- a/WebGUI/html/widgets/label.html
+++ b/WebGUI/html/widgets/label.html
@@ -5,7 +5,7 @@
 		<style type="text/css">	
 			body {
 				font: 10px arial;
-				background-color: rgba(250, 250, 250, 0);
+				background-color: rgba(255, 255, 255, 1);
 				width: 30;
 				height: 30;
 				//margin: 0px !important;
@@ -33,14 +33,13 @@
 				console.log("Label init()");
 				console.log(window.frameElement.id);
 				window.parent.setupWidget(window.frameElement.id, getAttributes());
-			
 			}
 
 			function setupPVs(settings)	{}
 
 			function drawWidget(widget, parameters)
 			{
-				setAttributes(window.parent.page_.widgets[widget.el.id].attributes);
+				setAttributes(window.parent.page_.widgets[widget.el.id.split('-')[1]].attributes);
 			}
 
 			function getAttributes()
@@ -67,12 +66,11 @@
 			        document.getElementById("display").style.textAlign = parameters_["text_position"];
 			}
 
-			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity) {}
+			function drawNewValue(pvName, pvValue, pvTime, pvStatus, pvSeverity) {}
 
 			window.parent.document.getElementById("editWidgetAttributesPopup-container").onclick = function()
 			{
-				console.log("attribute menu onclick. label widgets parameters: " + window.parent.page_.widgets[window.frameElement.id].attributes["label"]);
-				//document.getElementById("label-text").innerHTML = window.parent.page_.widgets[window.frameElement.id].attributes["label"];
+				console.log("attribute menu onclick. label widgets parameters: " + window.parent.page_.widgets[window.frameElement.id.split('-')[1]].attributes["label"]);
 			};
 
 			window.onresize = function() {
