--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -1,8 +1,3 @@
-
-
-
-
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD
 HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -17,13 +12,13 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 			  	font: 10px arial;
 			  	background-color:  rgb(255, 255, 255);
 			}
-
 			.wrapper {
-			  display: grid;
-			  //grid-template-columns: repeat(2, 1fr);
-			  grid-template-columns: repeat(auto-fill,minmax(120px, 1fr));
-			  grid-gap: 10px;
-			  grid-auto-rows: minmax(100px, auto);
+				display: grid;
+				//grid-template-columns: repeat(2, 1fr);
+				grid-template-columns: repeat(auto-fill,minmax(120px, 1fr));
+				grid-gap: 10px;
+				grid-auto-rows: minmax(100px, auto);
+				//grid-auto-columns: 200px 200px;
 			}
 
 		</style>
@@ -63,19 +58,24 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 			{
 				widget_ = widget;
 				parameters_ = parameters;
-				var olddiv = document.getElementById("dispaly-div");
-				if (olddiv != null)
-					document.getElementById("display").removeChild(olddiv);
+//				var olddiv = document.getElementById("display-div");
+//				if (olddiv != null)
+//					document.getElementById("display").removeChild(olddiv);
+
+				var display = document.getElementById("display");
+				display.innerHTML = "";
+				if (!Object.getOwnPropertyNames(widget.pvList).length)
+					display.innerHTML = "METER <br/> ADD PVs TO WIDGET";
 
 				var div = document.createElement('div');
-				div.className="wrapper";
-				div.id = "dispaly-div";
-				document.getElementById("display").appendChild(div);
+				div.className = "wrapper";
+				div.id = "display-div";
+				display.appendChild(div);
+
 				var pv_number = 0;
 				for(var pv in widget.pvList)
-				{   
+				{
 					var divtemp = document.createElement('div');
-					//divtemp.style.color = "white";
 					divtemp.style.fontSize = "auto";
 					if (parameters_["show_labels"] == "true")
 					{
@@ -113,10 +113,9 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 			}
 
 			function setAttributes(attributes)
-			//function setParameters(attributes)
 			{
 				parameters_ = attributes;
-				console.log("thermometer: set parameters()");
+				console.log("Gauge: setAttributes()");
 				console.log(parameters_);
 			}
 
@@ -174,40 +173,9 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 				gauges[name].render();
 			}
 
-			function createGauges()
-			{
-				createGauge("memory", "Memory");
-				createGauge("cpu", "CPU");
-				createGauge("network", "Network");
-			}
-
-			function updateGauges()
-			{
-				for (var key in gauges)
-				{
-					var value = getRandomValue(gauges[key]);
-					gauges[key].redraw(value);
-				}
-			}
-
-			function getRandomValue(gauge)
-			{
-				var overflow = 0; //10;
-				return gauge.config.min - overflow + (gauge.config.max - gauge.config.min + overflow*2) * Math.random();
-			}
-
-			function initialize()
-			{
-				createGauges();
-				//setInterval(updateGauges, 5000);
-			}
-
 			window.onresize = function() {
 				for(var name in gauges)
 				{
-					//gauges[name].config.size = Math.min(window.innerHeight - 60, window.innerWidth) / Object.keys(gauges).length | 0;
-					//gauges[name].configure(gauges[name].config);
-					//gauges[name].redraw(50);
 					drawWidget(widget_, parameters_);
 				}
 				console.log("gauge: window.onresize()");
@@ -219,6 +187,8 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
 	<body onload="Javascript:init()">
 		<div id="display" width="100%" height="100%">
+			<center>METER <br/> ADD PVs TO WIDGET</center>
+		</div>
 	</body>
 
 </html>
